fix convo name, add images for readme